# gtranslator

./: Makefile  Makefile.am  apertium-plugin.gtranslator-plugin.desktop.in  apertium-plugin.gtranslator.plugin  apertium-plugin.h  custom-widget.c  custom-widget.h  gtr-apertium-conf-dlg.c  gtr-apertium-conf-dlg.h  gtranslator-apertium-plugin.c  gtranslator-apertium-plugin.h  yukle.c
apertium-plugin/: apertium-plugin.c  apertium-plugin.h
